// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppEditPage should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <h1
        class="evblxhy-el-title"
      >
        will-test-dev-co-voracious-person
      </h1>
      <div
        class="e6l6sr3-el-tabs-full-width exshuwa-el-tabs-wrap"
      >
        <div
          class="egmnxi3-el-tabs-options-wrap"
        >
          <input
            checked=""
            class="enkj6b-el-tabs"
            id="general"
            name="app-edit-tabs"
            type="radio"
            value="general"
          />
          <label
            class="e1ob8xkh-el-tabs-label"
            for="general"
          >
            <span
              class="eulcr0n-el-tabs-item"
            >
              About Listings
            </span>
          </label>
          <input
            class="enkj6b-el-tabs"
            id="appListing"
            name="app-edit-tabs"
            type="radio"
            value="appListing"
          />
          <label
            class="e1ob8xkh-el-tabs-label"
            for="appListing"
          >
            <span
              class="eulcr0n-el-tabs-item"
            >
              AppMarket Listing
            </span>
          </label>
          <input
            class="enkj6b-el-tabs"
            id="authentication"
            name="app-edit-tabs"
            type="radio"
            value="authentication"
          />
          <label
            class="e1ob8xkh-el-tabs-label"
            for="authentication"
          >
            <span
              class="eulcr0n-el-tabs-item"
            >
              Authentication
            </span>
          </label>
          <input
            class="enkj6b-el-tabs"
            id="permissions"
            name="app-edit-tabs"
            type="radio"
            value="permissions"
          />
          <label
            class="e1ob8xkh-el-tabs-label"
            for="permissions"
          >
            <span
              class="eulcr0n-el-tabs-item"
            >
              Permissions
            </span>
          </label>
          <input
            class="enkj6b-el-tabs"
            id="acIntegration"
            name="app-edit-tabs"
            type="radio"
            value="acIntegration"
          />
          <label
            class="e1ob8xkh-el-tabs-label"
            for="acIntegration"
          >
            <span
              class="eulcr0n-el-tabs-item"
            >
              AgencyCloud Integration
            </span>
          </label>
        </div>
        <div
          class="e1147ynd-el-tabs-footer"
        />
      </div>
      <form>
        <p
          class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
        >
          You already have supplied enough details to get started with our APIs and if you just want to develop your app, you should visit the 
          <a
            href="/apps/SOME_APP_ID"
          >
            App Detail page
          </a>
           to obtain your Client Id.
        </p>
        <p
          class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
        >
          This page is the starting point for completing your app listing, and initiating the approvals process for your app to go live with customer data. For information on listing your app
           
          <a>
            see here
          </a>
          . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
           
          <a>
            here.
          </a>
        </p>
        <p
          class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
        >
          As you make changes, you should save your changes in the left hand side menu. You can do this as many times as you like until your app is listed, or live in the AppMarket. From this point on, you will need to create revisions to your app for our team to review. You can only have one live revision outstanding at any given time.
        </p>
        <h2
          class="e1byern-el-subtitle"
        >
          App Name
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
        >
          Your app name can be anything as long as it is unique in our database. By default we auto generate one from your company name and some randomised words. You should change it to something memorable to you and your customers.
        </p>
        <p
          class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
        >
          You can toggle ‘AppMarket Listed’ if your app is publicly listed in the AppMarket.
        </p>
        <div
          class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
        >
          <div
            class="ep31he9-el-input-wrap-full"
          >
            <div
              class="e1979rmu-el-input-group"
            >
              <input
                class="e1urjlvd-el-input"
                id="test-static-id"
                name="name"
                placeholder="The name of your app as it will appear to users"
                type="text"
              />
              <label
                class="e1nbkkrq-el-label"
                for="test-static-id"
              >
                Name
              </label>
            </div>
          </div>
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <div
              class="e1979rmu-el-input-group"
            >
              <label
                class="e1nbkkrq-el-label"
              >
                AppMarket Listed
              </label>
              <input
                class="e1ih6lkl-el-toggle-checkbox"
                id="app-edit-is-listed"
                name="isListed"
                type="checkbox"
              />
              <label
                class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
                for="app-edit-is-listed"
              >
                <span
                  class="e18omfqv-el-toggle-item"
                >
                  Yes
                </span>
                <span
                  class="e18omfqv-el-toggle-item"
                >
                  No
                </span>
              </label>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <h1
      class="evblxhy-el-title"
    >
      will-test-dev-co-voracious-person
    </h1>
    <div
      class="e6l6sr3-el-tabs-full-width exshuwa-el-tabs-wrap"
    >
      <div
        class="egmnxi3-el-tabs-options-wrap"
      >
        <input
          checked=""
          class="enkj6b-el-tabs"
          id="general"
          name="app-edit-tabs"
          type="radio"
          value="general"
        />
        <label
          class="e1ob8xkh-el-tabs-label"
          for="general"
        >
          <span
            class="eulcr0n-el-tabs-item"
          >
            About Listings
          </span>
        </label>
        <input
          class="enkj6b-el-tabs"
          id="appListing"
          name="app-edit-tabs"
          type="radio"
          value="appListing"
        />
        <label
          class="e1ob8xkh-el-tabs-label"
          for="appListing"
        >
          <span
            class="eulcr0n-el-tabs-item"
          >
            AppMarket Listing
          </span>
        </label>
        <input
          class="enkj6b-el-tabs"
          id="authentication"
          name="app-edit-tabs"
          type="radio"
          value="authentication"
        />
        <label
          class="e1ob8xkh-el-tabs-label"
          for="authentication"
        >
          <span
            class="eulcr0n-el-tabs-item"
          >
            Authentication
          </span>
        </label>
        <input
          class="enkj6b-el-tabs"
          id="permissions"
          name="app-edit-tabs"
          type="radio"
          value="permissions"
        />
        <label
          class="e1ob8xkh-el-tabs-label"
          for="permissions"
        >
          <span
            class="eulcr0n-el-tabs-item"
          >
            Permissions
          </span>
        </label>
        <input
          class="enkj6b-el-tabs"
          id="acIntegration"
          name="app-edit-tabs"
          type="radio"
          value="acIntegration"
        />
        <label
          class="e1ob8xkh-el-tabs-label"
          for="acIntegration"
        >
          <span
            class="eulcr0n-el-tabs-item"
          >
            AgencyCloud Integration
          </span>
        </label>
      </div>
      <div
        class="e1147ynd-el-tabs-footer"
      />
    </div>
    <form>
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        You already have supplied enough details to get started with our APIs and if you just want to develop your app, you should visit the 
        <a
          href="/apps/SOME_APP_ID"
        >
          App Detail page
        </a>
         to obtain your Client Id.
      </p>
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        This page is the starting point for completing your app listing, and initiating the approvals process for your app to go live with customer data. For information on listing your app
         
        <a>
          see here
        </a>
        . If you are looking for guidance on what we look for when reviewing app, there is a dedicated page
         
        <a>
          here.
        </a>
      </p>
      <p
        class="e11jaxfn-el-has-grey-text etrchfm-el-has-section-margin e15ggth7-el-body-text"
      >
        As you make changes, you should save your changes in the left hand side menu. You can do this as many times as you like until your app is listed, or live in the AppMarket. From this point on, you will need to create revisions to your app for our team to review. You can only have one live revision outstanding at any given time.
      </p>
      <h2
        class="e1byern-el-subtitle"
      >
        App Name
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        Your app name can be anything as long as it is unique in our database. By default we auto generate one from your company name and some randomised words. You should change it to something memorable to you and your customers.
      </p>
      <p
        class="e11jaxfn-el-has-grey-text e15ggth7-el-body-text"
      >
        You can toggle ‘AppMarket Listed’ if your app is publicly listed in the AppMarket.
      </p>
      <div
        class="e1fwulnz-el-form-layout-has-margin ee6e7by-el-form-layout"
      >
        <div
          class="ep31he9-el-input-wrap-full"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <input
              class="e1urjlvd-el-input"
              id="test-static-id"
              name="name"
              placeholder="The name of your app as it will appear to users"
              type="text"
            />
            <label
              class="e1nbkkrq-el-label"
              for="test-static-id"
            >
              Name
            </label>
          </div>
        </div>
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <label
              class="e1nbkkrq-el-label"
            >
              AppMarket Listed
            </label>
            <input
              class="e1ih6lkl-el-toggle-checkbox"
              id="app-edit-is-listed"
              name="isListed"
              type="checkbox"
            />
            <label
              class="ehi76vp-el-has-grey-bg e1ott14k-el-toggle-label"
              for="app-edit-is-listed"
            >
              <span
                class="e18omfqv-el-toggle-item"
              >
                Yes
              </span>
              <span
                class="e18omfqv-el-toggle-item"
              >
                No
              </span>
            </label>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppEditPage should match snapshot where loading apps 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="ev48hx0-el-is-full-page ebhrnzh-el-loader-container"
      >
        <div
          class="eq1m1jz-el-loader"
        >
          <div
            class="exikdu1-el-loader-moving-bar"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="ev48hx0-el-is-full-page ebhrnzh-el-loader-container"
    >
      <div
        class="eq1m1jz-el-loader"
      >
        <div
          class="exikdu1-el-loader-moving-bar"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppEditPage should match snapshot where no app found 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="epibvz0-el-intent-secondary evmehgn-el-is-active e1rlwnim-el-pn-is-full-width e10l30r1-el-pn-is-inline eiq7urd-el-persistant-notification"
      >
        <div
          class="e1f8chn8-el-pn-icon"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.99958 0C4.47746 0 0 4.47746 0 9.99958C0 15.5217 4.47746 20 9.99958 20C15.5217 20 20 15.5217 20 9.99958C20 4.47746 15.5217 0 9.99958 0ZM12.0813 15.498C11.5666 15.7012 11.1568 15.8552 10.8495 15.9619C10.5431 16.0686 10.1867 16.1219 9.78116 16.1219C9.1581 16.1219 8.67302 15.9695 8.32762 15.6656C7.98222 15.3617 7.81037 14.9765 7.81037 14.5084C7.81037 14.3263 7.82307 14.1401 7.84847 13.9505C7.87471 13.7608 7.91619 13.5475 7.97291 13.3079L8.61714 11.0324C8.67386 10.814 8.72296 10.6066 8.7619 10.4135C8.80085 10.2188 8.81947 10.0402 8.81947 9.87767C8.81947 9.58815 8.75937 9.38497 8.64 9.27069C8.51894 9.1564 8.29122 9.10053 7.95175 9.10053C7.78582 9.10053 7.61481 9.12508 7.43958 9.17672C7.26603 9.23005 7.11534 9.27831 6.99175 9.32571L7.1619 8.62476C7.58349 8.45291 7.9873 8.30561 8.37249 8.1837C8.75767 8.06011 9.12169 7.99915 9.46455 7.99915C10.0834 7.99915 10.5608 8.14984 10.8969 8.44783C11.2313 8.74667 11.3998 9.13524 11.3998 9.6127C11.3998 9.71175 11.3879 9.88614 11.3651 10.135C11.3422 10.3848 11.299 10.6125 11.2364 10.8216L10.5956 13.0904C10.5431 13.2724 10.4965 13.4806 10.4542 13.7134C10.4127 13.9462 10.3924 14.124 10.3924 14.2434C10.3924 14.5448 10.4593 14.7505 10.5947 14.8597C10.7285 14.9689 10.963 15.0239 11.2948 15.0239C11.4514 15.0239 11.6267 14.996 11.8248 14.9418C12.0212 14.8876 12.1634 14.8394 12.2531 14.7979L12.0813 15.498ZM11.9678 6.2891C11.669 6.56677 11.3092 6.70561 10.8885 6.70561C10.4686 6.70561 10.1062 6.56677 9.80487 6.2891C9.50519 6.01143 9.35365 5.67365 9.35365 5.27915C9.35365 4.8855 9.50603 4.54688 9.80487 4.26667C10.1062 3.98561 10.4686 3.84593 10.8885 3.84593C11.3092 3.84593 11.6698 3.98561 11.9678 4.26667C12.2667 4.54688 12.4165 4.8855 12.4165 5.27915C12.4165 5.6745 12.2667 6.01143 11.9678 6.2891Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
        <div
          class="e1mwx0ir-el-pn-content"
        >
          No record of this app found
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="epibvz0-el-intent-secondary evmehgn-el-is-active e1rlwnim-el-pn-is-full-width e10l30r1-el-pn-is-inline eiq7urd-el-persistant-notification"
    >
      <div
        class="e1f8chn8-el-pn-icon"
      >
        <span
          class="ej9yrfo-el-icon"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.99958 0C4.47746 0 0 4.47746 0 9.99958C0 15.5217 4.47746 20 9.99958 20C15.5217 20 20 15.5217 20 9.99958C20 4.47746 15.5217 0 9.99958 0ZM12.0813 15.498C11.5666 15.7012 11.1568 15.8552 10.8495 15.9619C10.5431 16.0686 10.1867 16.1219 9.78116 16.1219C9.1581 16.1219 8.67302 15.9695 8.32762 15.6656C7.98222 15.3617 7.81037 14.9765 7.81037 14.5084C7.81037 14.3263 7.82307 14.1401 7.84847 13.9505C7.87471 13.7608 7.91619 13.5475 7.97291 13.3079L8.61714 11.0324C8.67386 10.814 8.72296 10.6066 8.7619 10.4135C8.80085 10.2188 8.81947 10.0402 8.81947 9.87767C8.81947 9.58815 8.75937 9.38497 8.64 9.27069C8.51894 9.1564 8.29122 9.10053 7.95175 9.10053C7.78582 9.10053 7.61481 9.12508 7.43958 9.17672C7.26603 9.23005 7.11534 9.27831 6.99175 9.32571L7.1619 8.62476C7.58349 8.45291 7.9873 8.30561 8.37249 8.1837C8.75767 8.06011 9.12169 7.99915 9.46455 7.99915C10.0834 7.99915 10.5608 8.14984 10.8969 8.44783C11.2313 8.74667 11.3998 9.13524 11.3998 9.6127C11.3998 9.71175 11.3879 9.88614 11.3651 10.135C11.3422 10.3848 11.299 10.6125 11.2364 10.8216L10.5956 13.0904C10.5431 13.2724 10.4965 13.4806 10.4542 13.7134C10.4127 13.9462 10.3924 14.124 10.3924 14.2434C10.3924 14.5448 10.4593 14.7505 10.5947 14.8597C10.7285 14.9689 10.963 15.0239 11.2948 15.0239C11.4514 15.0239 11.6267 14.996 11.8248 14.9418C12.0212 14.8876 12.1634 14.8394 12.2531 14.7979L12.0813 15.498ZM11.9678 6.2891C11.669 6.56677 11.3092 6.70561 10.8885 6.70561C10.4686 6.70561 10.1062 6.56677 9.80487 6.2891C9.50519 6.01143 9.35365 5.67365 9.35365 5.27915C9.35365 4.8855 9.50603 4.54688 9.80487 4.26667C10.1062 3.98561 10.4686 3.84593 10.8885 3.84593C11.3092 3.84593 11.6698 3.98561 11.9678 4.26667C12.2667 4.54688 12.4165 4.8855 12.4165 5.27915C12.4165 5.6745 12.2667 6.01143 11.9678 6.2891Z"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
      <div
        class="e1mwx0ir-el-pn-content"
      >
        No record of this app found
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
